fix: remove overflow:hidden for dialog overlay (#338)

--- a/src/v2/styles/Dialog/Dialog-layout.scss
+++ b/src/v2/styles/Dialog/Dialog-layout.scss
@@ -2,7 +2,6 @@
 
 .str-chat__dialog-overlay {
   inset: 0;
-  overflow: hidden;
   position: absolute;
   height: var(--str-chat__dialog-overlay-height);
   width: 100%;
